# network-latency-tester

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  build.rs  check_ctok-v2.sh
.claude/: settings.json  statusline.sh
.claude/agents/: spec-task-implementation-reviewer.md
.github/workflows/: release.yml
.spec-workflow/: check_ctok-v2.sh
.spec-workflow/specs/improvement/: bash-parity-improvement-plan.md
.spec-workflow/specs/network-latency-tester/: BUGFIX_PLAN_APPROVED.md  TEST_SUMMARY_REPORT.md  design.md  requirements.md  tasks.md
benches/: performance.rs
docs/: configuration.md  usage.md
proptest-regressions/stats/: comprehensive_tests.txt
scripts/: test_runner.sh
src/: app.rs  client.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  types.rs
src/cli/: help.rs  mod.rs
src/client/: cert_validation.rs  integration_tests.rs  platform.rs  timeouts.rs  windows.rs
src/config/: comprehensive_tests.rs  env.rs  mod.rs  parser.rs  validation.rs
src/dns/: comprehensive_tests.rs  mod.rs  platform.rs
src/error/: mod.rs  recovery.rs  user_messages.rs
src/executor/: mod.rs  optimized.rs  tuning.rs
src/models/: config.rs  metrics.rs  mod.rs
src/output/: colored.rs  formatter.rs  mod.rs  verbose.rs
src/stats/: comprehensive_tests.rs  mod.rs  optimized.rs
src/updater/: cache.rs  data.rs  feeds.rs  geo.rs  github.rs  interactive.rs  mod.rs  types.rs  version.rs
src/utils/: comparison.rs  mod.rs
tests/: bash_parity.rs  cli_interactions.rs  e2e_tests.rs  update_cli_integration_test.rs  update_flow_integration_test.rs  validation.rs
