[package]
name = "network-latency-tester"
version = "0.1.0"
edition = "2021"
authors = ["Network Latency Tester"]
description = "A high-performance network latency testing tool with DNS configuration support"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment file support
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal colors and formatting
colored = "2.0"
comfy-table = "7.0"

# Statistics and timing
chrono = { version = "0.4", features = ["serde"] }

# DNS resolution
trust-dns-resolver = "0.23"

# URL parsing
url = "2.5"

# Async trait support
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# System resource detection
num_cpus = "1.16"

# UUID generation for correlation IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing utilities (dev dependencies) - optimized for faster compilation
[dev-dependencies]
# Essential test dependencies only
tokio-test = "0.4"
# Remove heavy dependencies that slow down compilation for basic unit tests
# criterion = "0.5"        # Only needed for benchmarks
# proptest = "1.0"         # Only needed for property tests
tempfile = "3.0"
# wiremock = "0.6.4"       # Only needed for integration tests
# httpmock = "0.7"         # Only needed for integration tests
# assert_cmd = "2.0"       # Only needed for CLI integration tests
# predicates = "3.0"       # Only needed for CLI integration tests
# regex = "1.10"           # Only needed for complex pattern matching

# Performance benchmarks
[[bench]]
name = "performance"
harness = false

# Faster compilation profiles
[profile.dev]
# Speed up compilation for development
opt-level = 0
debug = false       # Disable debug info to speed up compilation
incremental = true  # Enable incremental compilation
codegen-units = 16  # Increase codegen units for parallel compilation

[profile.test]
# Optimize test compilation
opt-level = 0
debug = false       # Disable debug info for tests
incremental = true
