[package]
name = "network-latency-tester"
version = "0.1.8"
edition = "2021"
autobins = false
authors = ["MaurUppi <noreply@github.com>"]
description = "A high-performance network latency testing tool with DNS configuration support and cross-platform compatibility"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaurUppi/network-latency-tester"
homepage = "https://github.com/MaurUppi/network-latency-tester"
documentation = "https://docs.rs/network-latency-tester"
keywords = ["network", "latency", "testing", "dns", "performance"]
categories = ["command-line-utilities", "network-programming", "development-tools::testing"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]
exclude = [
    "target/",
    ".git*",
    ".spec-workflow/",
    ".claude/",
    "BUGFIX_PLAN_APPROVED.md",
]

[[bin]]
name = "nlt"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment file support
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = { version = "2.0.14" }

# Terminal colors and formatting
colored = { version = "3.0.0" }

# Statistics and timing
chrono = { version = "0.4", features = ["serde"] }

# DNS resolution
trust-dns-resolver = "0.23"

# URL parsing
url = "2.5"

# Async trait support
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# System resource detection
num_cpus = "1.16"

# UUID generation for correlation IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Testing utilities (dev dependencies) - optimized for faster compilation
[dev-dependencies]
# Essential test dependencies only
tokio-test = "0.4"
proptest = "1.0"         # Property testing framework
tempfile = "3.0"
wiremock = "0.6.4"       # Mock HTTP server for integration tests
assert_cmd = "2.0"       # Only needed for CLI integration tests
predicates = "3.0"       # Only needed for CLI integration tests
regex = "1.10"           # Only needed for complex pattern matching

[dev-dependencies.criterion]
version = "0.7.0"
features = ["html_reports"]  # Performance benchmarking

# Build dependencies
[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

# Performance benchmarks
[[bench]]
name = "performance"
harness = false

# Faster compilation profiles
[profile.dev]
# Speed up compilation for development
opt-level = 0
debug = false       # Disable debug info to speed up compilation
incremental = true  # Enable incremental compilation
codegen-units = 16  # Increase codegen units for parallel compilation

[profile.test]
# Optimize test compilation
opt-level = 0
debug = false       # Disable debug info for tests
incremental = true

# Release configuration for optimized builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Cross-compilation targets for major platforms
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-apple-darwin]
# Native macOS builds

[target.aarch64-apple-darwin] 
# Apple Silicon builds

[target.x86_64-unknown-linux-gnu]
# Linux x86_64 builds

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

# Package metadata for cargo-release
[package.metadata.release]
pre-release-replacements = [
  { file = "README.md", search = "Version: [0-9\\.]+", replace = "Version: {{version}}" },
  { file = "CHANGELOG.md", search = "## Unreleased", replace = "## Unreleased\n\n## {{version}} - {{date}}" },
]
tag-message = "Release version {{version}}"
tag-prefix = "v"
pre-release-commit-message = "chore: release v{{version}}"
push = true
